test/corpus/array.txt
==================
Arrays
==================

Array pack_of_cards --> 52;
Array foo table 5;
-----

(source_file
    (array
        (identifier)
        (number)
    )
    (array
        (identifier)
        (number)
    )
)

==================
Array access
==================

[ Main;
    print (string) object.&arr-->0;
];

-----

(source_file
    (routine
        (function_sig (identifier))
        (function_block
            (print
                (identifier)
                (property_access
                    (identifier)
                    (array_access
                        (identifier)
                        (number)
                    )
                )
            )
        )
    )
)

==================
Array length
==================

[ Main;
    print (number) object.#arr;
];

-----

(source_file
    (routine
        (function_sig (identifier))
        (function_block
            (print
                (identifier)
                (property_access
                    (identifier)
                    (array_access
                        (identifier)
                    )
                )
            )
        )
    )
)
