test/corpus/binary_expressions.txt
==================
Binary Expressions
==================

Constant MAX_CARRIED = 7 + 1;
Constant MAX_CARRIED = 7 * 1 - 1;

-----

(source_file
    (constant
        (identifier)
        (binary_expression
            (number)
            (operator)
            (number)
        )
    )
    (constant
        (identifier)
        (binary_expression
            (binary_expression
                (number)
                (operator)
                (number)
            )
            (operator)
            (number)
        )
    )
)
