test/corpus/conditionals.txt
==================
If single statement
==================

[ Main;
    if (true) print "hello world";
];

---
(source_file
    (routine
        (function_sig (identifier))
        (function_block
            (conditional
                (boolean)
                (print
                    (string_double_quoted)
                )
            )
        )
    )
)

==================
If block
==================

[ Main;
    if (action == ##Take) {
        foo = 5;
        print "hello world";
    }
];

---
(source_file
    (routine
        (function_sig (identifier))
        (function_block
            (conditional
                (binary_expression
                    (identifier)
                    (operator)
                    (identifier)
                )
                (code_block
                    (local_var_decl
                        (identifier)
                        (number)
                    )
                    (print
                        (string_double_quoted)
                    )
                )
            )
        )
    )
)

==================
If else single statement
==================

[ Main;
    if (true) print "hello world"; else print "goodbye world";
];

---
(source_file
    (routine
        (function_sig (identifier))
        (function_block
                (conditional
                    (boolean)
                    (print
                        (string_double_quoted)
                    )
                    (print
                        (string_double_quoted)
                    )
                )
            )
    )
)

==================
If else block
==================

[ Main;
    if (true) {
        foo = 5;
        print "hello world";
    } else {
        foo = 42;
        print "goodbye world";
    }
];

---
(source_file
    (routine
        (function_sig (identifier))
        (function_block
            (conditional
                (boolean)
                (code_block
                    (local_var_decl
                        (identifier)
                        (number)
                    )
                    (print
                        (string_double_quoted)
                    )
                )
                (code_block
                    (local_var_decl
                        (identifier)
                        (number)
                    )
                    (print
                        (string_double_quoted)
                    )
                )
            )
        )
    )
)

==================
If else mixed block
==================

[ Main;
    if (true) {
        foo = 5;
        print "hello world";
    } else print "goodbye";
];

---
(source_file
    (routine
        (function_sig (identifier))
        (function_block
            (conditional
                (boolean)
                (code_block
                    (local_var_decl
                        (identifier)
                        (number)
                    )
                    (print
                        (string_double_quoted)
                    )
                )
                (print
                    (string_double_quoted)
                )
            )
        )
    )
)

==================
Switch
==================

[ Main;
   switch(birds_eaten) {
        0: print "sad";
        1, 2, 3: print "not bad!";
        VAR: print "the best";
        default: print "same same";
   }
];

---
(source_file
    (routine
        (function_sig (identifier))
        (function_block
            (conditional
                (identifier)
                (case
                    (switch_value
                        (number)
                    )
                    (print
                        (string_double_quoted)
                    )
                )
                (case
                    (switch_value
                        (number)
                    )
                    (switch_value
                        (number)
                    )
                    (switch_value
                        (number)
                    )
                    (print
                        (string_double_quoted)
                    )
                )
                (case
                    (switch_value
                        (identifier)
                    )
                    (print
                        (string_double_quoted)
                    )
                )
                (case
                    (switch_value
                        (identifier)
                    )
                    (print
                        (string_double_quoted)
                    )
                )
            )
        )
    )
)

==================
Switch with multiple statements per block
==================

[ Main;
   switch(birds_eaten) {
    0:
        print "sad";
        foo = 5;
    1 to 3:
        print "not bad!";
        print "sad";
   }
];

------------------

(source_file
    (routine
        (function_sig (identifier))
        (function_block
            (conditional
                (identifier)
                (case
                    (switch_value
                        (number)
                    )
                    (print (string_double_quoted))
                    (local_var_decl
                        (identifier)
                        (number)
                    )
                )
                (case
                    (switch_value
                        (number)
                        (number)
                    )
                    (print
                        (string_double_quoted)
                    )
                (print
                        (string_double_quoted)
                    )
                )
            )
        )
    )
)


==================
If block lt
==================

[ Main;
    if (action <= ##Take) {
        foo = 5;
        print "hello world";
    }
];

---
(source_file
    (routine
        (function_sig (identifier))
        (function_block
            (conditional
                (binary_expression
                    (identifier)
                    (operator)
                    (identifier)
                )
                (code_block
                    (local_var_decl
                        (identifier)
                        (number)
                    )
                    (print
                        (string_double_quoted)
                    )
                )
            )
        )
    )
)

==================
Conditional expression with routine message
==================

[ Main;
    if (noun ~= w_obj && random(100) <= 95) {
        print "hello world";
    }
];

-----

(source_file
      (routine
        (function_sig
          (identifier))
        (function_block
          (conditional
            (binary_expression
              (binary_expression
                (binary_expression
                  (identifier)
                  (operator)
                  (identifier))
                (operator)
                (routine_call
                  (identifier)
                  (routine_message
                    (number))))
              (operator)
              (number))
            (code_block
              (print
                (string_double_quoted)))))))


==================
Binary expression with brackets
==================

[ Main;
    if ((noun ~= w_obj) && (random(100) <= 95)) {
        print "hello world";
    }
];

-----
(source_file
      (routine
        (function_sig
          (identifier))
        (function_block
          (conditional
            (binary_expression
              (binary_expression
                (identifier)
                (operator)
                (identifier))
              (operator)
              (binary_expression
                (routine_call
                  (identifier)
                  (routine_message
                    (number)))
                (operator)
                (number)))
            (code_block
              (print
                (string_double_quoted)))))))
