test/corpus/objects.txt
==================
Simplest Object
==================

Object;

-----
(source_file
    (object
        class_name: (identifier)
    )
)

==================
Object with props
==================

Object magpie "black-striped bird"
    with wingspan, worms_eaten;

-----
(source_file
    (object
        class_name: (identifier)
        (identifier)
        (string_double_quoted)
        (identifier)
        (identifier)
    )
)

==================
Object with embedded routine and data list
==================

Object magpie "black-striped bird"
    with name 'magpie' 'bird' 'black-striped' 'black' 'striped',
    wingspan 5,
    flying_strength [;
        return magpie.wingspan + magpie.worms_eaten;
    ],
    worms_eaten;

-----
(source_file
    (object
        class_name: (identifier)
        (identifier)
        (string_double_quoted)
        (identifier)
        (string_single_quoted)
        (string_single_quoted)
        (string_single_quoted)
        (string_single_quoted)
        (string_single_quoted)
        (identifier)
        (number)
        (identifier)
        (embedded_routine
            (function_sig)
            (return
                (binary_expression
                    (property_access
                        (identifier)
                        (identifier)
                    )
                    (operator)
                    (property_access
                        (identifier)
                        (identifier)
                    )
                )
            )
        )
        (identifier)
    )
)

==================
Object with attributes
==================

Object magpie "black-striped bird"
    with
        wingspan,
        worms_eaten
    has animate light
    class bird;

-----
(source_file
    (object
        class_name: (identifier)
        (identifier)
        (string_double_quoted)
        (identifier)
        (identifier)
        (identifier)
        (identifier)
        (identifier)
    )
)

==================
Object with switch blocks in embedded_routine
==================

Object magpie "black-striped bird"
    with
        wingspan,
        worms_eaten,
        after [;
            Take: "You pick the mushroom, neatly cleaving its thin stalk.";
            Drop: "The mushroom drops to the ground, battered slightly.";
            Fish, Examine: "The mushroom is a small, white fungus with a thin stalk.";
            Empty: ;
        ]
    has animate light
    class bird;

-----
(source_file
    (object
        class_name: (identifier)
        (identifier)
        (string_double_quoted)
        (identifier)
        (identifier)
        (identifier)
        (embedded_routine
            (function_sig)
            (switch_block (identifier))
            (return
                (string_double_quoted)
            )
            (switch_block (identifier))
            (return
                (string_double_quoted)
            )
            (switch_block
                (identifier)
                (identifier)
            )
            (return
                (string_double_quoted)
            )
            (switch_block (identifier))
        )
        (identifier)
        (identifier)
        (identifier)
    )
)


==================
Object messages
==================

[ Main;
    x = plant.pour_over(cold_spring_water);
];

-----

(source_file
    (routine
        (function_sig (identifier))
        (local_var_decl
            (identifier)
            (property_access
                (identifier)
                (identifier)
                (routine_message
                    (identifier)
                )
            )
        )

    )
)


==================
Superclass messages
==================

[ Main;
   self.Treasure::deposit();
];

-----

(source_file
    (routine
        (function_sig (identifier))
        (property_access
            (identifier)
            (identifier)
            (identifier))
            (routine_message)

    )
)
